# minimal-mediapipe-cpp

./: CMakeLists.txt  LICENSE  README.md  conan_install.bat  demo.cpp
FaceLib/: face_detector.cpp  face_detector.h  landmark_extractor.cpp  landmark_extractor.h
conan/: conan_profile_debug.txt  conan_profile_release.txt  conanfile.txt
